<resources>
    <string name="app_name">StockAnalysis</string>
    <string name="debt_success">%1$s下载成功</string>
    <string name="debt_fail">%1$s下载失败</string>
    <string name="eighteen_step_analysis_self">18步分析法-自研</string>
    <string name="eighteen_step_analysis_self01">18步分析法-自研-01</string>
    <string name="eighteen_step_analysis">18步分析法-自动评价表</string>
    <string name="links">常用网址大全</string>
    <string name="eighteen_step_analysis_table">18步分析法表格</string>
    <string name="stock_num_description">请输入需要分析的股票代码</string>
    <string name="stock_num_hint">股票代码不能为空，请输入需要分析的股票代码之后再试！！！</string>
    <string name="stock_num_hint_need_correct">您输入的股票代码有误，请输入正确的股票代码之后再试！！！</string>
    <string name="start_analysis">开始分析</string>
    <string name="view_case_mind_map">2.0课程-案例指导及科目思维导图(11-20)</string>
    <string name="big_gift">终结大礼包</string>
    <string name="view_debt_seven_step">第五周-资产负债表分析7部法-爱问财</string>
    <string name="view_index_standard">指数基金投资标准</string>
    <string name="view_i_wencai">i问财--旧版</string>
    <string name="view_i_wencai_new">i问财--新版</string>
    <string name="view_ge_gu_wang">同花顺个股网</string>
    <string name="open_directly">直接打开</string>
    <string name="share">分享给好友</string>
    <string name="description">十八步法分析表格已生成，请选择操作方式！</string>
    <string name="share_file">分析18步表格</string>
</resources>