<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/eighteen_step_analysis_self"
        android:title="@string/eighteen_step_analysis_self"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/eighteen_step_analysis"
        android:title="@string/eighteen_step_analysis"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/links"
        android:title="@string/links"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/i_wencai"
        android:title="@string/view_i_wencai"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/i_wencai_new"
        android:title="@string/view_i_wencai_new"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/ge_gu_wang"
        android:title="@string/view_ge_gu_wang"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/menu_index_standard"
        android:title="@string/view_index_standard"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/view_case_mind_map"
        android:title="@string/view_case_mind_map"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/view_big_gift"
        android:title="@string/big_gift"
        android:icon="@drawable/abc_vector_test">
    </item>
    <item android:id="@+id/view_debt_seven_step"
        android:title="@string/view_debt_seven_step"
        android:icon="@drawable/abc_vector_test">
    </item>
</menu>